# Itmoloops

./: .gitignore  CMakeLists.txt  README.md
examples/: TheRealSlim.txt
include/itmoloops/cli/: argparser.h
include/itmoloops/core/: note_event.h  renderer.h  scheduler.h
include/itmoloops/dsl/: ast.h  diagnostic.h  lexer.h  parser.h  pitch.h  source.h  validator.h
include/itmoloops/dsp/: builtin_register.h  effect.h  instrument.h  oscillator_util.h  registries.h
include/itmoloops/dsp/fx/: echo.h  gain.h  tremolo.h
include/itmoloops/dsp/instr/: sampler.h  sine.h  square.h  triangle.h
include/itmoloops/io/: wav_writer.h
include/itmoloops/util/: parse_utils.h
src/itmoloops/: CMakeLists.txt
src/itmoloops/cli/: argparser.cpp
src/itmoloops/core/: renderer.cpp  scheduler.cpp
src/itmoloops/dsl/: diagnostic.cpp  lexer.cpp  parser.cpp  pitch.cpp  validator.cpp
src/itmoloops/dsp/: builtin_register.cpp  oscillator_util.cpp  registries.cpp
src/itmoloops/dsp/fx/: echo.cpp  gain.cpp  tremolo.cpp
src/itmoloops/dsp/instr/: sampler.cpp  sine.cpp  square.cpp  triangle.cpp
src/itmoloops/io/: wav_writer.cpp
src/itmoloops/util/: parse_utils.cpp
